public class Package {
    private final Card[] cardsInPackage = new Card[5];
}
